--- a/CalendarApp/src/app/calendar/calendar.component.html
+++ b/CalendarApp/src/app/calendar/calendar.component.html
@@ -3,38 +3,37 @@
   <button class="btn btn-outline-primary col-sm-1" id="next" (click)="nextMonth()">Next</button>
 </div>
 
-<div class="container col-sm-8 col-md-7 col-lg-8 mt-5">
+<div class="container">
+  <h3 id="monthAndYear">{{months[currentMonth]}} {{currentYear}}</h3>
   <div class="card">
-      <h3 class="card-header" id="monthAndYear">{{months[currentMonth]}} {{currentYear}}</h3>
-      <table class="table table-bordered table-responsive-sm" id="calendar">
-          <thead>
+    <table class="table table-bordered" id="calendar">
+        <thead>
           <tr>
               <th *ngFor="let day of week">{{day}}</th>
           </tr>
-          </thead>
+        </thead>
 
-          <tbody>
-              <tr *ngIf="days">
-                  <td *ngFor="let day of week1">{{day}}</td>
-              </tr>
-              <tr *ngIf="days">
-                  <td *ngFor="let day of week2">{{day}}</td>
-              </tr>
-              <tr *ngIf="days">
-                  <td *ngFor="let day of week3">{{day}}</td>
-              </tr>
-              <tr *ngIf="days">
-                  <td *ngFor="let day of week4">{{day}}</td>
-              </tr>
-              <tr *ngIf="days">
-                  <td *ngFor="let day of week5">{{day}}</td>
-              </tr>
-              <tr *ngIf="days">
-                  <td *ngFor="let day of week6">{{day}}</td>
-              </tr>
-          </tbody>
-      </table>
-
-      <br/>
+        <tbody>
+            <tr *ngIf="week1">
+                <td (click)="openModal(day)" *ngFor="let day of week1">{{day}}</td>
+            </tr>
+            <tr *ngIf="week2">
+                <td (click)="openModal(day)" *ngFor="let day of week2">{{day}}</td>
+            </tr>
+            <tr *ngIf="week3">
+                <td (click)="openModal(day)" *ngFor="let day of week3">{{day}}</td>
+            </tr>
+            <tr *ngIf="week4">
+                <td (click)="openModal(day)" *ngFor="let day of week4">{{day}}</td>
+            </tr>
+            <tr *ngIf="week5">
+                <td (click)="openModal(day)" *ngFor="let day of week5">{{day}}</td>
+            </tr>
+            <tr *ngIf="week6">
+                <td (click)="openModal(day)" *ngFor="let day of week6">{{day}}</td>
+            </tr>
+        </tbody>
+    </table>
+    <br/>
   </div>
 </div>
